--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.2.2
   uuid: ^3.0.7
+  flutter_local_notifications: ^17.1.2
+  flutter_phoenix: ^1.1.0
 
 dev_dependencies:
   flutter_test:
